--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 body {
-  background: #111;
+
   color: #fff;
+  background: none;
+  box-shadow: none;
+  ;
+
 }
 
 #root {
@@ -11,24 +15,26 @@ body {
   padding-top: 5.5rem;
   /* Add space for fixed navbar */
   text-align: center;
+  background: none;
+  box-shadow: none;
+
 }
 
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  position: fixed;
+  justify-content: flex-end;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   max-width: none;
-  border-radius: 0 0 0.5rem 0.5rem;
-  background: #222;
+
   color: #fff;
   padding: 1rem;
   font-size: 1.3rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
   z-index: 100;
+
 }
 
 .options-container {
@@ -37,15 +43,21 @@ nav {
 }
 
 .option-btn {
-  background: #444;
   color: #fff;
   border: none;
   border-radius: 4px;
-  padding: 0.5rem 1.2rem;
   font-size: 1rem;
   cursor: pointer;
   opacity: 1;
   transition: background 0.2s;
+}
+
+.option-btn-active,
+.option-btn:active,
+.option-btn:focus,
+.option-btn:focus-visible {
+  color: #fff;
+  font-weight: 600;
 }
 
 .option-btn:disabled {
