Add new AI stars image asset to the project

--- a/src/EditPage.css
+++ b/src/EditPage.css
@@ -8,6 +8,9 @@
     color: #fff;
     box-shadow: 0 2px 8px #4747c1;
     padding: 2rem;
+    flex: 1 1 0;
+    display: flex;
+    height: 100%;
 }
 
 .editpage-main-header {
