--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@ body {
   max-width: none;
   width: 100%;
   margin: 0;
+  padding-top: 72px;
+  /* add space for fixed navbar, adjust if needed */
   /* Add space for fixed navbar */
   text-align: center;
   background: none;
@@ -23,17 +25,17 @@ nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  position: sticky;
+  position: fixed;
   top: 0;
-  left: 0;
   right: 0;
+  width: 100vw;
   max-width: none;
   background: black;
   color: #fff;
   padding: 1rem;
   font-size: 1.3rem;
-  z-index: 100;
-
+  z-index: 1000;
+  box-shadow: 0 2px 12px #0003;
 }
 
 .options-container {
