--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   max-width: none;
   width: 100%;
   margin: 0;
-  padding-top: 72px;
+  /* padding-top: 72px; */
   /* add space for fixed navbar, adjust if needed */
   /* Add space for fixed navbar */
   text-align: center;
